[package]
name = "lnd-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnd_grpc_rust = "2.1.0"
# tokio = "1.27.0"
derive_builder = "0.12.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.0"
serde_derive = "1.0.159"
serde_json = "1.0.48"
