[package]
name = "power-grid"
version = "0.1.0"
edition = "2021"

[dependencies]
# lnd_grpc_rust = "2.1.0"
derive_builder = "0.12.0"
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.0"
serde_derive = "1.0.159"
serde_json = "1.0.48"
tonic = "0.9.2"
tonic-openssl = { version = "0.2" }
prost = "0.11"

hyper = "0.14"
hyper-openssl = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
openssl = "0.10"
tower = "0.4"
pretty_env_logger = "0.5.0"
hex = "0.4.3"
base64-compat = "1.0.0"

[build-dependencies]
tonic-build = "0.9.2"
protobuf-codegen = "3"
protoc-rust = "^2.0"
